--- a/app/src/main/res/drawable/login_input_bg.xml
+++ b/app/src/main/res/drawable/login_input_bg.xml
@@ -3,7 +3,7 @@
 
     <corners android:radius="6px" />
 
-    <solid android:color="#2e2d33" />
-    <stroke android:color="#4d4d4d" />
+    <solid android:color="#ffffff" />
+    <stroke android:color="#cccccc" />
 
 </shape>
