--- a/app/src/main/res/layout/activity_account_security.xml
+++ b/app/src/main/res/layout/activity_account_security.xml
@@ -7,13 +7,11 @@
     android:orientation="vertical"
     tools:context=".ui.activity.setting.AccountSecurityActivity">
 
-    <include layout="@layout/layout_title" />
-
     <LinearLayout
         android:id="@+id/certified_phone_manage"
         style="@style/setting_page_item_style"
         android:layout_marginTop="10dp"
-        android:background="@color/setting_item_bg"
+        android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -21,13 +19,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bind_phone_txt"
-            android:textColor="@color/white"
+            android:textColor="@color/text_color_gray3"
             android:textSize="14sp" />
 
         <TextView
             android:id="@+id/verified_phone"
             style="@style/setting_subpage_item_content"
-            android:text="@string/bind_phone_default"
+            android:text="--"
             android:textColor="@color/text_color_gray1" />
 
         <ImageView
@@ -41,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/setting_item_bg"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
@@ -55,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/logined_passwd_manage_txt"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="14sp" />
 
 
@@ -79,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/remote_passwd_manage_txt"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="14sp" />
 
 
@@ -95,7 +93,29 @@
     <LinearLayout
         style="@style/setting_page_item_style"
         android:layout_marginTop="10dp"
-        android:background="@color/setting_item_bg"
+        android:background="@color/white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/remote_control_fingerprint_unlock_txt"
+            android:textColor="@color/text_color_gray3"
+            android:textSize="14sp" />
+
+
+        <CheckBox
+            android:id="@+id/fingerprint_toggle_ctr"
+            style="@style/manage_message_checkbox"
+            android:checked="false"
+            android:layout_centerVertical="true" />
+    </LinearLayout>
+    <View style="@style/setting_page_item_divider" />
+    <LinearLayout
+        style="@style/setting_page_item_style"
+        android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -104,7 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/remote_no_passwd_cycle_txt"
-            android:textColor="@color/white"
+            android:textColor="@color/text_color_gray3"
             android:textSize="14sp" />
 
 
