--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -85,10 +85,10 @@
     <color name="gray">#D0D0D0</color>
     <!--yema created by marller-->
     <color name="setting_item_bg">#2e2d33</color>
-    <color name="setting_item_divider_bg">#4d4d4d</color>
+    <color name="setting_item_divider_bg">#cccccc</color>
     <!-- 大乘橙色 -->
     <color name="scarlet">#b22d14</color>
-    <color name="main_color">#171922</color>
+    <color name="main_color">#f0f0f0</color>
     <color name="title_bar_right_btn_bg">#171922</color>
     <color name="dialog_btn_font_color">#2c77c0</color>
     <color name="dialog_background">#e6ffffff</color>
