--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -247,5 +247,15 @@
         <item name="android:gravity">center</item>
     </style>
 
-
+    <style name="vcode_style">
+        <item name="android:textColor">@color/text_color_gray3</item>
+        <item name="android:textSize">@dimen/text_size_small_s1</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:text">@string/usercenter_push_validate</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:background">@drawable/verification_send_bg</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
