--- a/app/src/main/res/layout/activity_loading2.xml
+++ b/app/src/main/res/layout/activity_loading2.xml
@@ -3,7 +3,7 @@
     android:id="@+id/loading_lay_mainlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layout_background">
+    android:background="@color/main_color">
 
     <include
         android:id="@+id/layout_title"
