--- a/app/src/main/res/layout/activity_login_passwd_manage.xml
+++ b/app/src/main/res/layout/activity_login_passwd_manage.xml
@@ -6,13 +6,11 @@
     android:background="@color/main_color"
     android:orientation="vertical"
     tools:context=".ui.activity.setting.LoginPasswdManageActivity">
-    <include
-        layout="@layout/layout_title"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/setting_item_bg"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
@@ -26,7 +24,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/login_passwd_remember_txt"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="14sp" />
 
 
@@ -50,7 +48,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/login_passwd_forget_txt"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="14sp" />
 
 
