--- a/app/src/main/res/layout/activity_msg_manage.xml
+++ b/app/src/main/res/layout/activity_msg_manage.xml
@@ -13,13 +13,11 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="10dp"
-        android:background="@color/setting_item_bg"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
             style="@style/setting_page_item_style"
-            android:layout_marginTop="10dp"
-            android:background="@color/setting_item_bg"
             android:gravity="center_vertical"
 
             android:orientation="horizontal">
@@ -29,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/insurance_expiration_reminder_txt"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="14sp" />
 
 
@@ -43,11 +41,7 @@
 
         <LinearLayout
             style="@style/setting_page_item_style"
-            android:layout_marginTop="10dp"
-            android:background="@color/setting_item_bg"
             android:gravity="center_vertical"
-
-
             android:orientation="horizontal">
 
             <TextView
@@ -55,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/annual_inspection_reminder_txt"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="14sp" />
 
 
@@ -69,8 +63,6 @@
 
         <LinearLayout
             style="@style/setting_page_item_style"
-            android:layout_marginTop="10dp"
-            android:background="@color/setting_item_bg"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -79,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/driving_report_txt"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="14sp" />
 
 
