--- a/app/src/main/res/layout/layout_error.xml
+++ b/app/src/main/res/layout/layout_error.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layout_background">
+    >
 
 
     <ImageView
@@ -25,7 +25,7 @@
         android:layout_marginTop="15dip"
         android:background="@null"
         android:text="点击重试"
-        android:textColor="@color/app_white"
+        android:textColor="@color/text_color_gray3"
         android:textSize="14sp"/>
 
     <TextView
