--- a/app/src/main/res/layout/layout_title_right_btn.xml
+++ b/app/src/main/res/layout/layout_title_right_btn.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/title_height"
-    android:background="@color/main_page_head_bg">
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/head_back_img1"
@@ -19,7 +19,7 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:text=""
-        android:textColor="@color/white"
+        android:textColor="@color/text_color_gray3"
         android:textSize="@dimen/title_text_size" />
 
     <ImageView
@@ -41,7 +41,7 @@
         android:layout_centerVertical="true"
         android:padding="4dp"
         android:text="确定"
-        android:textColor="@color/app_white"
+        android:textColor="@color/text_color_gray3"
         android:textSize="14sp"
         android:background="@drawable/position_input_bg"
         android:layout_marginRight="@dimen/head_margin_h"
