--- a/app/src/main/res/values-hdpi/styles.xml
+++ b/app/src/main/res/values-hdpi/styles.xml
@@ -166,7 +166,7 @@
         <item name="android:layout_marginRight">12dip</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_color_gray1</item>
         <item name="android:gravity">right|center_vertical</item>
     </style>
     <!--车辆管理底部弹出style-->
