登录注册UI 首页四个按钮页面切换

--- a/app/src/main/res/drawable/login_input_bg.xml
+++ b/app/src/main/res/drawable/login_input_bg.xml
@@ -3,7 +3,7 @@
 
     <corners android:radius="6px" />
 
-    <solid android:color="#ffffff" />
-    <stroke android:color="#cccccc" />
+    <solid android:color="@color/white" />
+    <stroke android:color="@color/text_color_gray1" />
 
 </shape>
