--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,27 +2,126 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_color"
+    android:background="@color/layout_background"
     android:orientation="vertical"
     >
 
-    <com.carlt.doride.ui.view.NoScrollViewPager
-        android:id="@+id/main_view_pager"
+    <FrameLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         />
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/text_color_gray3"
         />
-    <android.support.design.widget.TabLayout
-        android:id="@+id/main_tab_layout"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_weight="0"
-        android:background="@color/layout_background"
-        />
+        android:layout_height="56dp">
+        <LinearLayout
+            android:id="@+id/tab_ll_home"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            >
+            <ImageView
+                android:id="@+id/tab_iv_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/tab_home"
+                />
+            <TextView
+                android:id="@+id/tab_txt_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/tab_text_color"
+                android:layout_marginTop="5dp"
+                android:textSize="12sp"
+                android:text="首页"
+                />
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/tab_ll_car"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            >
+            <ImageView
+                android:id="@+id/tab_iv_car"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/tab_car"
+                />
+            <TextView
+                android:id="@+id/tab_txt_car"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/tab_text_color"
+                android:layout_marginTop="5dp"
+                android:textSize="12sp"
+                android:text="座驾"
+                />
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/tab_ll_remote"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            >
+            <ImageView
+                android:id="@+id/tab_iv_remote"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/tab_remote"
+                />
+            <TextView
+                android:id="@+id/tab_txt_remote"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/tab_text_color"
+                android:layout_marginTop="5dp"
+                android:textSize="12sp"
+                android:text="远程"
+                />
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/tab_ll_setting"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            >
+            <ImageView
+                android:id="@+id/tab_iv_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/tab_my"
+                />
+            <TextView
+                android:id="@+id/tab_txt_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/tab_text_color"
+                android:layout_marginTop="5dp"
+                android:textSize="12sp"
+                android:text="设置"
+                />
+
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
