--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="horizontal"
-    android:background="@color/transparent"
+    android:background="@color/white"
     android:layout_height="@dimen/title_height"
     >
 
@@ -22,7 +22,7 @@
         android:layout_gravity="center"
         android:textSize="@dimen/title_text_size"
         android:layout_centerInParent="true"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         />
     <TextView
         android:id="@+id/btnOpt"
