--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,5 +2,7 @@
 <resources>
     <paths>
         <external-path path="" name="camera_photos" />
+        <external-path path="sdcard/yema/down" name="files_root" />
+        <external-path path="." name="external_storage_root" />
     </paths>
 </resources>
