--- a/app/src/main/res/layout/activity_vcode_reset_remote_passwd.xml
+++ b/app/src/main/res/layout/activity_vcode_reset_remote_passwd.xml
@@ -3,11 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/main_color"
     tools:context="com.carlt.doride.ui.activity.setting.VcodeResetRemotePasswdActivity">
-    <include layout="@layout/layout_title" />
     <EditText
         android:id="@+id/remote_phone_input"
         style="@style/usercenter_edit1"
@@ -54,16 +52,14 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
         android:text="@string/new_remote_passwd_txt"/>
-    <com.carlt.doride.ui.view.PasswordView
+    <com.carlt.doride.ui.view.PwdEditText
         android:id="@+id/new_remote_passwd"
         android:layout_width="match_parent"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="5dp"
         android:layout_height="wrap_content"
-        app:passwordLength="6"
-        app:borderColor="@color/setting_item_divider_bg"
-        app:mode="rect"/>
+       />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,16 +68,14 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
         android:text="@string/new_remote_passwd_again_txt"/>
-    <com.carlt.doride.ui.view.PasswordView
+    <com.carlt.doride.ui.view.PwdEditText
         android:id="@+id/new_remote_vcode_passwd_again"
         android:layout_width="match_parent"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="12dp"
         android:layout_height="wrap_content"
-        app:passwordLength="6"
-        app:borderColor="@color/setting_item_divider_bg"
-        app:mode="rect"/>
+        />
     <TextView
         android:id="@+id/forget_reset_remote_commit"
         style="@style/public_bottom_btn"
