--- a/app/src/main/res/layout/activity_reset_remote_passwd.xml
+++ b/app/src/main/res/layout/activity_reset_remote_passwd.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/main_color"
     tools:context="com.carlt.doride.ui.activity.setting.ResetRemotePasswdActivity">
@@ -15,16 +14,16 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
         android:text="@string/old_remote_passwd_txt"/>
-    <com.carlt.doride.ui.view.PasswordView
+    <com.carlt.doride.ui.view.PwdEditText
         android:id="@+id/reset_old_remote_passwd"
+        android:background="@drawable/romote_edit_bg"
+        android:layout_height="44dp"
         android:layout_width="match_parent"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
-        android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        app:passwordLength="6"
-        app:borderColor="@color/setting_item_divider_bg"
-        app:mode="rect"/>
+        android:maxLength="6"
+        android:inputType="number"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,16 +32,16 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
         android:text="@string/new_remote_passwd_txt"/>
-    <com.carlt.doride.ui.view.PasswordView
+    <com.carlt.doride.ui.view.PwdEditText
         android:id="@+id/reset_new_remote_passwd"
         android:layout_width="match_parent"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="5dp"
-        android:layout_height="wrap_content"
-        app:passwordLength="6"
-        app:borderColor="@color/setting_item_divider_bg"
-        app:mode="rect"/>
+        android:background="@drawable/romote_edit_bg"
+        android:layout_height="44dp"
+        android:maxLength="6"
+        android:inputType="number"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,16 +50,16 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
         android:text="@string/new_remote_passwd_again_txt"/>
-    <com.carlt.doride.ui.view.PasswordView
+    <com.carlt.doride.ui.view.PwdEditText
         android:id="@+id/reset_new_remote_passwd_again"
         android:layout_width="match_parent"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="12dp"
-        android:layout_height="wrap_content"
-        app:passwordLength="6"
-        app:borderColor="@color/setting_item_divider_bg"
-        app:mode="rect"/>
+        android:background="@drawable/romote_edit_bg"
+        android:layout_height="44dp"
+        android:maxLength="6"
+        android:inputType="number"/>
     <TextView
         android:id="@+id/reset_remote_commit"
         style="@style/public_bottom_btn"
