--- a/app/src/main/res/layout/activity_vcode_reset_remote_passwd.xml
+++ b/app/src/main/res/layout/activity_vcode_reset_remote_passwd.xml
@@ -47,7 +47,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@color/text_color_gray1"
         android:textSize="12sp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
@@ -58,12 +58,15 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="5dp"
-        android:layout_height="wrap_content"
+        android:maxLength="6"
+        android:inputType="number"
+        android:layout_height="44dp"
+        android:background="@drawable/romote_edit_bg"
        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@color/text_color_gray1"
         android:textSize="12sp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
@@ -73,8 +76,11 @@
         android:layout_width="match_parent"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="5dp"
+        android:maxLength="6"
+        android:inputType="number"
         android:layout_marginRight="12dp"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
+        android:background="@drawable/romote_edit_bg"
         />
     <TextView
         android:id="@+id/forget_reset_remote_commit"
@@ -83,7 +89,7 @@
         android:text="@string/edit_commit"
         android:layout_marginTop="49dip"
         android:layout_marginLeft="12dip"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_marginRight="12dip"
         android:textSize="16sp"
         android:textStyle="bold" />
