--- a/app/src/main/res/layout/activity_car_state_now.xml
+++ b/app/src/main/res/layout/activity_car_state_now.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/layout_background"
-    android:orientation="vertical" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/layout_background"
+              android:orientation="vertical">
 
-    <include layout="@layout/head_sub_normal" />
+    <include layout="@layout/head_sub_normal"/>
 
-    <ListView
+    <com.carlt.doride.ui.pull.PullToRefreshListView
         android:id="@+id/activity_car_condition_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:dividerHeight="0dp"
-        android:divider="#2e2d33"
-        android:background="#2e2d33"
-        />
+        android:background="@color/white"
+        android:paddingTop="10dp"/>
 
 </LinearLayout>
