--- a/app/src/main/res/layout/head_sub_normal.xml
+++ b/app/src/main/res/layout/head_sub_normal.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?><!-- 姜黄色背景的副标题 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="center_vertical"
+              android:orientation="horizontal"
+              android:paddingLeft="12dp"
+              android:paddingRight="12dp">
 
 
     <ImageView
@@ -14,7 +14,7 @@
         android:layout_height="46dip"
         android:layout_centerInParent="true"
         android:contentDescription="信息中心图标"
-        android:src="@drawable/icon_secretary" />
+        android:src="@drawable/icon_secretary"/>
 
     <TextView
         android:id="@+id/layout_sub_head_txt"
@@ -29,7 +29,7 @@
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:text=""
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:textColor="@color/title_bg"
+        android:textSize="14sp"/>
 
 </LinearLayout>
