--- a/app/src/main/res/layout/layout_title_right_btn.xml
+++ b/app/src/main/res/layout/layout_title_right_btn.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/title_height"
-    android:background="@color/white">
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/title_height"
+                android:background="@color/white">
 
     <ImageView
         android:id="@+id/head_back_img1"
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/head_margin_h"
-        android:src="@drawable/back_bg" />
+        android:src="@drawable/back_bg"/>
 
     <TextView
         android:id="@+id/head_back_txt1"
@@ -18,9 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text=""
         android:textColor="@color/text_color_gray3"
-        android:textSize="@dimen/title_text_size" />
+        android:textSize="@dimen/title_text_size"/>
 
     <ImageView
         android:id="@+id/head_back_img2"
@@ -29,22 +28,24 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/head_margin_h"
-        android:visibility="gone"
         android:src="@drawable/icon_message_manager_bg"
+        android:visibility="gone"
         />
 
     <TextView
         android:id="@+id/head_back_text2"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:padding="4dp"
-        android:text="确定"
-        android:textColor="@color/text_color_gray3"
-        android:textSize="14sp"
-        android:background="@drawable/position_input_bg"
         android:layout_marginRight="@dimen/head_margin_h"
+        android:background="@drawable/bottom_btn_bg"
+        android:gravity="center"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:text="确定"
+        android:textColor="@color/text_color_write"
+        android:textSize="14sp"
         android:visibility="gone"
         />
 </RelativeLayout>
