1，修改定位寻车页面UI，处理寻车逻辑，更换高德appkey 2，修改导航同步UI，搜索时软键盘回车键变成搜索按钮

--- a/app/src/main/res/layout/activity_car_safty_list.xml
+++ b/app/src/main/res/layout/activity_car_safty_list.xml
@@ -18,15 +18,14 @@
 
     <com.carlt.doride.ui.pull.PullToRefreshListView
         android:id="@+id/activity_car_query_illegal_list"
-        style="@style/public_listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/activity_car_safty_sub"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="0dip"
-        android:divider="@color/transparent"
-        android:dividerHeight="9dip"
+        android:layout_marginTop="20dip"
+        android:paddingTop="10dp"
         />
+
 </RelativeLayout>
