--- a/app/src/main/res/layout/activity_location_synchronize.xml
+++ b/app/src/main/res/layout/activity_location_synchronize.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <com.amap.api.maps.MapView
         android:id="@+id/navigationtocar_mapView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
     <ImageView
         android:id="@+id/navigationtocar_img_destination"
@@ -14,17 +14,18 @@
         android:layout_height="30dp"
         android:layout_centerInParent="true"
         android:src="@mipmap/icon_destination"
-        android:visibility="gone" />
+        android:visibility="gone"/>
+
     <RelativeLayout
         android:id="@+id/navigationtocar_lay_input"
-        android:layout_width="fill_parent"
-        android:layout_height="41dp"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
         android:layout_marginLeft="9dp"
         android:layout_marginRight="9dp"
         android:layout_marginTop="9dp"
         android:background="@drawable/position_input_bg"
         android:paddingLeft="14dp"
-        android:paddingRight="12dp" >
+        android:paddingRight="12dp">
 
 
         <TextView
@@ -34,32 +35,32 @@
             android:layout_centerVertical="true"
             android:ellipsize="end"
             android:gravity="center_vertical"
-            android:hint="查找地点、公交、地铁"
+            android:hint="查找地点"
             android:paddingLeft="5dp"
             android:singleLine="true"
             android:text=""
-            android:textColor="#ffffff"
-            android:textColorHint="#999999"
-            android:textSize="14sp" />
+            android:textColor="@color/text_color_gray3"
+            android:textColorHint="@color/text_color_gray0"
+            android:textSize="14sp"/>
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/navigationtocar_lay_addr"
         android:layout_width="fill_parent"
-        android:layout_height="41dp"
+        android:layout_height="44dp"
         android:layout_marginLeft="9dp"
         android:layout_marginRight="9dp"
         android:layout_marginTop="9dp"
         android:background="@drawable/position_input_bg"
         android:paddingLeft="14dp"
-        android:paddingRight="12dp" >
+        android:paddingRight="12dp">
 
         <ImageView
             android:id="@+id/navigationtocar_img_back"
             android:layout_width="33.5dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:src="@drawable/back_bg" />
+            android:src="@drawable/back_bg"/>
 
         <ImageView
             android:id="@+id/navigationtocar_img_cha"
@@ -68,7 +69,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="14dp"
-            android:src="@mipmap/icon_cross" />
+            android:src="@mipmap/ic_delete_black"/>
 
         <TextView
             android:id="@+id/navigationtocar_txt_addrinfo"
@@ -79,45 +80,46 @@
             android:layout_toRightOf="@id/navigationtocar_img_back"
             android:ellipsize="end"
             android:gravity="center_vertical"
+            android:hint="目的地地址信息"
             android:paddingLeft="5dp"
             android:singleLine="true"
-            android:text="目的地地址信息"
-            android:textColor="@color/text_color_gray0"
-            android:textSize="14sp" />
+            android:textColor="@color/text_color_gray3"
+            android:textColorHint="@color/text_color_gray1"
+            android:textSize="14sp"/>
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/navigationtocar_lay_send"
         android:layout_width="match_parent"
-        android:layout_height="66dp"
+        android:layout_height="68dp"
         android:layout_alignParentBottom="true"
-        android:background="#2e2d33"
+        android:background="#F0FFFFFF"
         android:paddingLeft="14dp"
-        android:paddingRight="14dp" >
+        android:paddingRight="14dp">
 
         <View
             android:id="@+id/line_h_m"
             android:layout_width="100dp"
             android:layout_height="0.5dp"
             android:layout_centerVertical="true"
-            android:background="@color/transparent" />
+            android:background="@color/transparent"/>
 
         <TextView
             android:id="@+id/navigationtocar_txt_send"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_width="125dp"
+            android:layout_height="35dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/navigation_btn_bg"
-            android:drawableLeft="@mipmap/icon_navigation_send"
-            android:drawablePadding="3dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="9dp"
-            android:paddingRight="9dp"
+            android:background="@drawable/bottom_btn_bg"
             android:clickable="true"
+            android:drawableLeft="@mipmap/icon_navigation_send"
+            android:drawablePadding="5dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="导航同步到车"
-            android:textColor="#fff" />
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/navigationtocar_txt_addrname"
@@ -128,23 +130,24 @@
             android:ellipsize="end"
             android:gravity="left"
             android:singleLine="true"
-            android:text=""
-            android:textColor="#fff"
-            android:textSize="16sp" />
+            android:text="----"
+            android:textColor="@color/text_color_gray3"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/navigationtocar_txt_addrdetail"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/line_h_m"
+            android:layout_marginTop="2dp"
             android:layout_toLeftOf="@id/navigationtocar_txt_send"
             android:ellipsize="end"
             android:gravity="left"
+            android:maxLines="2"
             android:singleLine="true"
-            android:text=""
-            android:layout_marginTop="2dp"
-            android:textColor="#999999"
-            android:textSize="14sp" />
+            android:text="----"
+            android:textColor="@color/text_color_gray0"
+            android:textSize="16sp"/>
     </RelativeLayout>
 
 </RelativeLayout>
