--- a/app/src/main/res/layout/list_item_address.xml
+++ b/app/src/main/res/layout/list_item_address.xml
@@ -39,7 +39,7 @@
             android:layout_marginTop="9dip"
             android:layout_toLeftOf="@id/item_address_txt_distance"
             android:text="地址名称"
-            android:textColor="@color/white"
+            android:textColor="@color/text_color_gray2"
             android:textSize="16sp" 
             android:singleLine="true"/>
 
