--- a/app/src/main/res/drawable/position_input_bg.xml
+++ b/app/src/main/res/drawable/position_input_bg.xml
@@ -4,7 +4,7 @@
         android:radius="3dp"/>
 	<stroke
 	    android:width="1px"
-	    android:color="#4d4d4d"/>
+	    android:color="#cccccc"/>
 	<solid 
-	    android:color="#2e2d33"/>
+	    android:color="#F0FFFFFF"/>
 </shape>
