--- a/app/src/main/res/layout/fragment_carmain_layout.xml
+++ b/app/src/main/res/layout/fragment_carmain_layout.xml
@@ -143,7 +143,7 @@
                         android:layout_height="27dip"
                         android:layout_below="@id/car_main_lay_safety_lay2"
                         android:gravity="center"
-                        android:text="续航里程（公里）"
+                        android:text="续航里程（km）"
                         android:textColor="@color/text_color_gray2"
                         android:textSize="@dimen/text_size_small_s1"/>
                 </LinearLayout>
@@ -307,15 +307,30 @@
                     android:src="@drawable/arrow_right"/>
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/car_main_txt_maintain"
-                android:layout_width="fill_parent"
-                android:layout_height="27dip"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/car_main_lay_maintain_lay"
+                android:layout_marginTop="3dp"
                 android:gravity="center"
-                android:text="上次自检得分：98"
-                android:textColor="@color/text_color_gray2"
-                android:textSize="@dimen/text_size_small_s1"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="27dip"
+                    android:text="上次自检得分："
+                    android:textColor="@color/text_color_gray2"
+                    android:textSize="@dimen/text_size_small_s1"/>
+
+                <TextView
+                    android:id="@+id/car_main_txt_maintain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="27dip"
+                    android:text="98"
+                    android:textColor="@color/text_color_gray2"
+                    android:textSize="@dimen/text_size_small_s1"/>
+            </LinearLayout>
+
         </RelativeLayout>
 
     </LinearLayout>
